--- a/figuras/css/style.css
+++ b/figuras/css/style.css
@@ -107,3 +107,9 @@ section{
 	position:relative;
 	top:1px;
 }
+.details{
+    margin-top: 20px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+}
